# create-melange-app

./: .gitignore  .ocamlformat  .rgignore  CONTRIBUTING.md  README.md  bun.lockb  create_melange_app.opam  dune  dune-project  flake.nix  package-lock.json  package.json  planning.md
dune.lock/: cppo.pkg  dune-build-info.pkg  fix.pkg  lock.dune  melange.pkg  merlin-extend.pkg  ocaml-base-compiler.pkg  ocaml.pkg  ocamlfind.pkg  ppx_deriving.pkg  ppxlib.pkg  reason-react-ppx.pkg  reason-react.pkg  reason.pkg
foobar/: dune-project.tmpl
my_super_cool_app/: dune-project  my_super_cool_app.opam  package-lock.json  package.json  vite.config.js
prtest/: README.md  dune  dune-project  package.json  vite.config.js
prtest/src/: App.re  Configuration.re  dune
prtest/src/bindings/: browser.ml
prtest/src/create_melange_app/: bundler.ml  node_package_manager.ml
src/: action.ml  app.ml  app.re  app_old.ml  cli.mjs  cli.ml  cli_old.ml  commander_example.js  dune  ink.ml  log.ml  melange.ml  monad.ml  option.ts  out  syntax.ml
src/action/: action.ml  dune
src/bindings/: bindings.ml  dune
src/bindings/commander/: argument.ml  command.ml  commander.ml  opt.ml
src/bindings/fs_extra/: fs.ml  fs_extra.ml  fs_ffi.mjs
src/bindings/handlebars/: handlebars.ml  options.ml
src/bindings/ink/: gradient.ml  hooks.ml  ink.ml  instance.ml  key.ml  link.ml  static.ml  stream.ml  text.ml  ui.ml
src/bindings/javascript/: javascript.ml
src/bindings/nodejs/: child_process.ml  nodejs.ml  path.ml  process.ml  url.ml  util.ml
src/bindings/open/: open.ml
src/bindings/promise/: promise.ml  promise.mli  promise_result.ml  promise_result.mli
src/cma/: bundler.ml  configuration.ml  context.ml  dune  dune_project.ml  fs.ml  git.ml  hmap.ml  hmap.mli  npm.ml  package_json.ml  plugin.ml  scaffold.ml  scaffold_v2.ml  template.ml  vite.ml  webpack.ml
src/commander/: argument.ml  command.ml  commander.ml  commander_option.ml  dune  opt.ml
src/common/: banner.re  dune  prefix.re  syntax.ml
src/core/: app_files.ml  app_module.ml  browser.ml  bundler.ml  configuration.ml  context.ml  context_plugin.ml  core.ml  dependency.ml  dune  dune.ml  dune_project.ml  engine.ml  engine.mli  engine_v2.ml  esbuild.ml  fs.ml  git.ml  git_scm.ml  node_js.ml  npm.ml  opam.ml  package_json.ml  process.ml  react.ml  readme.ml  template.ml  template_v2.ml  validation.ml  vite.ml  webpack.ml
src/env_check/: action.ml  component.re  dependency.ml  dune  env_check.re
src/fs_extra/: dune  fs_extra.ml
src/handlebars/: dune  handlebars.ml  options.ml  type.d.ts
src/init/: action.ml  brainstorming.ml  component.re  configuration.ml  dune  example.js  fs.ml  init.re  scaffold.ml  scaffold.re  template.ml  wizard.re
src/ink/: big_text.ml  box.ml  dune  example.re  gradient.ml  hooks.ml  ink.ml  instance.ml  newline.ml  spacer.ml  style.ml  text.ml  transform.ml  ui.ml
src/liquid/: dune  liquid.ml  template.ml
src/nodejs/: child_process.ml  dune  event_emitter.ml  util.ml
src/ocaml-install/: dune
src/ocaml_install/: component.re  ocaml_install.re
src/templates/base/: README.md.tmpl  README.tmpl  dune-project.tmpl  dune.tmpl  package.json.tmpl  tmp.json
src/templates/base/src/: dune.tmpl
src/templates/base/src/bindings/: dune
src/templates/extensions/app/app_ml/: app.ml.tmpl
src/templates/extensions/app/app_ml/bindings/: browser.ml  dune
src/templates/extensions/app/app_ml/cma_configuration/: dune
src/templates/extensions/app/app_ml/create_melange_app/: create_melange_app.ml  dune
src/templates/extensions/app/app_re/: app.re.tmpl
src/templates/extensions/app/app_re/bindings/: bindings.re  browser.re  dune
src/templates/extensions/app/app_re/cma_configuration/: bundler.re  cma_configuration.re  node_package_manager.re
src/templates/extensions/app/app_re/create_melange_app/: configuration.re  create_melange_app.re
src/templates/extensions/app/react_ml/: App.re.tmpl  Configuration.re
src/templates/extensions/app/react_ml/bindings/: bindings.ml  browser.ml
src/templates/extensions/app/react_ml/cma_configuration/: bundler.ml  cma_configuration.ml  configuration.ml
src/templates/extensions/app/react_ml/components/: Configuration.re  components.re  dune
src/templates/extensions/app/react_ml/create_melange_app/: configuration.ml  create_melange_app.ml
src/templates/extensions/app/react_re/: App.re.tmpl  Configuration.re
src/templates/extensions/app/react_re/bindings/: bindings.re  browser.re
src/templates/extensions/app/react_re/components/: components.re
src/templates/extensions/app/react_re/create_melange_app/: create_melange_app.re  dune
src/templates/extensions/esbuild/: esbuild.mjs  index.html
src/templates/extensions/git_scm/: _gitignore
src/templates/extensions/vite/: index.html  vite.config.js
src/templates/extensions/webpack/: index.html  webpack.config.js
src/templates/extensions/webpack/public/: index.html
