(dirs :standard \ node_modules)

; (alias
;  (name all)
;  (deps
;   (alias_rec create-melange-app)))

(melange.emit
 (target build)
 (alias create-melange-app)
 (emit_stdlib true)
 (libraries app)
 (promote (until-clean))
 (module_systems es6))

; (rule
;  (alias rollup)
;  (deps
;   (alias_rec create-melange-app))
;   (:vite_config ./vite.config.js)
;   (:pkg_json ./package.json)
;   (:index_html ./index.html))
;  (targets
;   (dir dist))
;  (action
;   (run npm run vite-build))
;  (mode
;   (promote (until-clean))))
