; This dune file is for configuring the 'create_melange_app' library in your 
; Melange project.

; (name create_melange_app) - This line sets the name of the library to 
; 'create_melange_app'.It's the identifier used within your project to refer 
; to this library.

; (modes melange) - This specifies that the library is to be compiled using Melange.

(library
 (name create_melange_app)
 (modes melange))
